# ascetic-ddd-ml

./: README.md  ascetic_ddd.opam  docker-compose.yml  dune-project
.github/workflows/: test.yml
lib/: ascetic_ddd.ml  dune
lib/encryption/: dune
lib/gherkin/: dune
lib/gherkin_edsl/: ascetic_gherkin_edsl.ml  dune
lib/inbox/: README.md  ascetic_inbox.ml  causal_dependency.ml  dune  inbox.ml  inbox.mli  inbox_message.ml  inbox_port.ml  init.sql  partition_strategy.ml
lib/outbox/: README.md  ascetic_outbox.ml  connection_provider.ml  dune  init.sql  outbox.ml  outbox.mli  outbox_message.ml  outbox_port.ml
lib/saga/: activity.ml  activity_host.ml  activity_resolver.ml  ascetic_saga.ml  dune  fallback_activity.ml  parallel_activity.ml  routing_slip.ml  saga_types.ml  serializable.ml  work_item.ml  work_item_arguments.ml  work_log.ml  work_result.ml
lib/saga/examples/: reserve_car_activity.ml  reserve_flight_activity.ml  reserve_hotel_activity.ml  serialization_example.ml
lib/specification/: dune
lib/unit_of_work/: ascetic_unit_of_work.ml  caqti_unit_of_work.mli  dune
test/: dune  test_saga.ml
test/inbox/: dune  test_inbox.ml  test_message.ml
test/outbox/: dune  test_outbox.ml
test/saga/: dune  test_activity.ml  test_activity_host.ml  test_activity_resolver.ml  test_examples.ml  test_fallback_activity.ml  test_helpers.ml  test_parallel_activity.ml  test_routing_slip.ml  test_routing_slip_serialization.ml  test_serialization_example.ml  test_work_item.ml  test_work_item_arguments.ml  test_work_log.ml  test_work_result.ml
